# advent

./: .gitignore  .rustfmt.toml  LICENSE  README.md  shell.nix
2020/: README.md  advent-of-code.cabal
2020/puzzle-input/: day15
2020/src/: Day1.hs  Day10.hs  Day14.hs  Day18.hs  Day21.hs  Day23.hs  Day3.hs  Day7.hs  Main.hs  Prelude.hs
2021/: .gitignore  README.md
2021/clojure-solutions/: project.clj
2021/elisp/: day1.el
2021/haskell/: haskell-solutions.cabal  haskell.cabal  package.yaml  stack.yaml
2021/haskell/app/: Main.hs
2021/haskell/src/: Day2.hs  Main.hs  Util.hs
aoc2015/rust-solutions/: Cargo.toml  flake.nix
aoc2015/rust-solutions/src/: day1.rs  day10.rs  day11.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
aoc2016/haskell-solutions/: LICENSE  haskell-solutions.cabal  package.yaml
aoc2016/haskell-solutions/app/: Main.hs
aoc2016/ocaml_solutions/: dune-project  flake.nix  ocaml_solutions.opam
aoc2016/ocaml_solutions/.direnv/: flake-profile-1-link
aoc2016/ocaml_solutions/lib/: .ocamlinit  day1.ml  day10.ml  day12.ml  day2.ml  day3.ml  day4.ml  day5.ml  day6.ml  day7.ml  day8.ml  day9.ml  dune  util.ml
aoc2017/bqn/: day01.bqn  day02.bqn  day03.bqn  day04.bqn  day05.bqn  day06.bqn  day07.bqn  day08.bqn  day09.bqn  day10.bqn  day11.bqn  day12.bqn  day13.bqn  day14.bqn  day15.bqn  day16.bqn  day17.bqn  day18.bqn  day19.bqn  day20.bqn  day21.bqn  day22.bqn  day23.bqn  day24.bqn  day25.bqn
aoc2017/inputs/: day19.txt  day21.txt
aoc2018/bqn-solutions/: day01.bqn  day02.bqn  day09.bqn  flake.nix
aoc2018/python-solutions/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  flake.nix
aoc2019/c_solutions/: .clang-format  Makefile  day01.c  day02.c  day03.c  day04.c  day05.c  day06.c  day07.c  day08.c  day09.c  day10.c  intcode.c  intcode.h  m.h  util.h
aoc2019/inputs/: day08.txt
aoc2020/: advent-of-code.cabal  flake.nix  stack.yaml
aoc2020/puzzle-input/: day9
aoc2020/src/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Main.hs  Util.hs
aoc2021/: day23.txt
aoc2021/apl/: day01.aplf
aoc2021/bqn/: day01.bqn  day02.bqn
aoc2021/clojure-solutions/: deps-lock.json  deps.edn  flake.nix  project.clj
aoc2021/haskell/: flake.nix  haskell-solutions.cabal
aoc2022/apl-solutions/: day01.apl  day02.apl  day03.apl  day04.apl  day06.apl
aoc2022/bqn-solutions/: day01.bqn  day02.bqn  day08.bqn
aoc2022/clojure-solutions/: project.clj
aoc2022/haskell-solutions/: haskell-solutions.cabal  package.yaml  stack.yaml
aoc2022/inputs/: day15.txt  day18.txt  day25.txt
aoc2022/ocaml_solutions/: dune-project  flake.nix
aoc2023/clojure-solutions/: project.clj  shell.nix
aoc2023/elisp-solutions/: day01.el
aoc2023/haskell-solutions/: flake.nix  haskell-solutions.cabal  package.yaml
aoc2023/inputs/: day13.txt  day14.txt  day15.txt  day16.txt  day17.txt  day24.txt  day25.txt
aoc2023/ocaml_solutions/: dune-project  flake.nix  ocaml_solutions.opam
aoc2023/ocaml_solutions/lib/: day01.ml  day02.ml  day04.ml  day06.ml  day08.ml  dune  util.ml
aoc2023/python-solutions/: .envrc  flake.nix  pyproject.toml
aoc2023/python-solutions/src/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day13.py  main.py  util.py
aoc2023/rust-solutions/: Cargo.toml
aoc2023/rust-solutions/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day08.rs  day09.rs  day13.rs  day14.rs  day17.rs  day23.rs  main.rs
aoc2024/bqn-solutions/: day01.bqn  day02.bqn  day03.bqn  day04.bqn  day05.bqn  day06.bqn  day07.bqn  day08.bqn  day09.bqn  day10.bqn  day11.bqn  day12.bqn  day13.bqn  day14.bqn  day15.bqn  day17.bqn  day18.bqn  day19.bqn  day20.bqn  day22.bqn  day23.bqn  day24.bqn  day25.bqn
aoc2024/clojure-solutions/: flake.nix  project.clj
aoc2024/haskell-solutions/: flake.nix  haskell-solutions.cabal
aoc2024/haskell-solutions/app/: Day01.hs  Day02.hs  Day03.hs  Day05.hs  Day07.hs  Day12.hs  Day18.hs  Day19.hs  Day21.hs  Day22.hs  Day23.hs  Day25.hs  Main.hs
aoc2024/inputs/: day01.txt  day03.txt  day04.txt  day05.txt  day06.txt  day11.txt  day13.txt  day14.txt  day15.txt  day16.txt  day18.txt  day19.txt  day20.txt  day21.txt  day23.txt  day24.txt
aoc2024/ocaml_solutions/: dune-project  flake.nix
aoc2024/python-solutions/: day01.py  flake.nix
aoc2024/rust-solutions/: Cargo.toml  flake.nix
aoc2025/bqn-solutions/: day01.bqn  day02.bqn  day03.bqn  day04.bqn  day05.bqn  day06.bqn  day07.bqn  day08.bqn  day09.bqn  day10.bqn  day11.bqn  day12.bqn  flake.nix
aoc2025/c-solutions/: day01.c  day07.c  util.h
aoc2025/clojure-solutions/: project.clj
aoc2025/haskell-solutions/: flake.nix  haskell-solutions.cabal
aoc2025/haskell-solutions/app/: Day01.hs  Day02.hs  Day04.hs  Day05.hs  Day08.hs  Day10.hs  Day11.hs
aoc2025/inputs/: day02.txt  day03.txt  day04.txt  day05.txt  day06.txt  day07.txt  day08.txt  day09.txt  day10.txt  day11.txt
aoc2025/ocaml_solutions/: dune-project  flake.nix  ocaml_solutions.opam
aoc2025/ocaml_solutions/lib/: dune
aoc2025/rust-solutions/: .rustfmt.toml  Cargo.toml
clojure-solutions/: project.clj
haskell-solutions/: haskell-solutions.cabal  package.yaml  stack.yaml
haskell-solutions/app/: Main.hs
haskell-solutions/src/: Coords.hs  Day1.hs  Day11.hs  Day12.hs  Day13.hs  Day16.hs  Day20.hs  Day21.hs  Day24.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Util.hs
inputs/: day20.txt  day3.txt  day5.txt
rust-solutions/: Cargo.toml
rust-solutions/src/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  main.rs  util.rs
util/bqn_util/: bitvec.bqn  util.bqn
util/clojure-aoc-util/: pom.xml  project.clj
util/haskell-aoc-util/: flake.nix  haskell-aoc-util.cabal
util/haskell-aoc-util/src/: Coords.hs  PriorityQueue.hs  Util.hs
util/rust-aoc-util/: Cargo.toml
(+151 files in other folders)
