name:                advent-of-code
version:             0.1.0.0
homepage:            https://gitlab.com/slotThe/aoc-2020-haskell
license:             AGPL-3
author:              Solid
maintainer:          Solid <soliditsallgood@mailbox.org>
copyright:           2020  Solid
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable advent-of-code
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O2
                       -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
  default-extensions:  OverloadedStrings
                     , ScopedTypeVariables
                     , BlockArguments
                     , NamedFieldPuns
                     , DuplicateRecordFields
                     , BangPatterns
                     , TupleSections
                     , TypeApplications
                     , LambdaCase
                     , OverloadedLabels
                     , DeriveGeneric
                     , ViewPatterns
  other-modules:       Prelude
                     , Day1
                     , Day2
                     , Day3
                     , Day4
                     , Day5
                     , Day6
                     , Day7
                     , Day8
                     , Day9
                     , Day10
                     , Day11
                     , Day12
                     , Day13
                     , Day14
                     , Day15
  build-depends:       base-prelude
                     , base-noprelude
                     , unordered-containers
                     , text
                     , bytestring
                     , attoparsec
                     , permute
                     , hashable
                     , vector
                     , transformers
                     , lens
                     , generic-lens
                     , arithmoi
