(lang dune 3.7)

(name ocaml_solutions)

(generate_opam_files true)

(source
 (github slotThe/advent))

(authors "Tony Zorman")

(maintainers "Tony Zorman")

(license LICENSE)

(package
 (name ocaml_solutions)
 (synopsis "OCaml solutions for advent of code 2016")
 (depends core stdio ocaml dune angstrom))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
