(lang dune 3.7)

(name ocaml_solutions)

(generate_opam_files true)

(source
 (github slotThe/advent))

(authors "Tony Zorman")

(maintainers "Tony Zorman")

(license LICENSE)

(package
 (name ocaml_solutions)
 (synopsis "OCaml solutions for some AOC 2023 problems")
 (depends (core (<= v0.15.0)) stdio ocaml dune angstrom utop))
