[tool.poetry]
name = "python-solutions"
version = "0.1.0"
description = "Python solutions for some AOC2023 problems"
authors = ["Tony Zorman <soliditsallgood@mailbox.org>"]
license = "AGPL-3"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff-lsp = "^0.0.45"
pyright = "^1.1.338"
ruff = "^0.1.5"

[tool.poetry.scripts]
day01 = "src.day01:day01"
day02 = "src.day02:day02"

[tool.black]
target_version = ["py311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
