[package]
name = "rust-solutions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itertools = "0.10.5"
nom = "7.1.3"
rust-aoc-util = { path = "../../util/rust-aoc-util/" }
md5 = "0.7.0"
regex = "1.10.2"
lazy_static = "1.4.0"
