cabal-version:      3.4
name:               haskell-solutions
version:            0.1.0.0
synopsis:           Haskell Solutions for AoC 2024
-- description:
homepage:           https://github.com/slotThe/advent
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Tony Zorman
maintainer:         mail@tony-zorman.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    build-depends:
        base ^>=4.18.2.1,
        haskell-aoc-util,
    hs-source-dirs:   lib
    default-language: GHC2021

common day
    import:           warnings
    build-depends:
        base ^>=4.18.2.1,
        haskell-solutions,
        haskell-aoc-util,
    hs-source-dirs:   app
    default-language: GHC2021

executable haskell-solutions
    import:           day
    main-is:          Main.hs

executable day01
    import:           day
    main-is:          Day01.hs
