cabal-version:      3.4
name:               haskell-solutions
version:            0.1.0.0
synopsis:           Haskell Solutions for AoC 2024
-- description:
homepage:           https://github.com/slotThe/advent
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Tony Zorman
maintainer:         mail@tony-zorman.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common ghcopts
    ghc-options:
        -Weverything
        -Wno-implicit-prelude
        -Wno-missing-import-lists
        -Wno-unused-packages
        -Wno-missing-safe-haskell-mode
        -Wno-all-missed-specialisations
        -Wno-unsafe
        -Wno-prepositive-qualified-module
        -O2
    default-extensions:
        StrictData
        NoImplicitPrelude
        OverloadedStrings

library
    import:           ghcopts
    build-depends:
        base ^>=4.18.2.1,
        haskell-aoc-util,
        text,
    hs-source-dirs:   lib
    default-language: GHC2021

common day
    import:           ghcopts
    build-depends:
        base ^>=4.18.2.1,
        text,
        haskell-solutions,
        haskell-aoc-util,
    hs-source-dirs:   app
    default-language: GHC2021

executable haskell-solutions
    import:           day
    main-is:          Main.hs

executable day01
    import:           day
    main-is:          Day01.hs

executable day02
    import:           day
    main-is:          Day02.hs

executable day03
    import:           day
    main-is:          Day03.hs
