[package]
name = "rust-solutions"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
itertools = "0.13.0"
nom = "7.1.3"
rayon = "1.10.0"
rust-aoc-util = { path = "../../util/rust-aoc-util/" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false

[profile.dev]
debug = 0
