cabal-version:      3.4
name:               haskell-solutions
version:            0.1.0.0
homepage:           https://github.com/slotThe/advent
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Tony Zorman
maintainer:         mail@tony-zorman.com
build-type:         Simple

common warnings
    ghc-options: -Wall

executable haskell-solutions
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
    hs-source-dirs:   app
    default-language: GHC2024
