cabal-version:      3.4
name:               haskell-solutions
version:            0.1.0.0
homepage:           https://github.com/slotThe/advent
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Tony Zorman
maintainer:         mail@tony-zorman.com
build-type:         Simple

common warnings
    ghc-options:
        -Weverything
        -Wno-implicit-prelude
        -Wno-missing-import-lists
        -Wno-unused-packages
        -Wno-missing-safe-haskell-mode
        -Wno-all-missed-specialisations
        -Wno-unsafe
        -Wno-prepositive-qualified-module
        -Wno-name-shadowing
        -Wno-missing-kind-signatures
        -O2
    default-extensions:
        StrictData
        NoImplicitPrelude
        OverloadedStrings
        LambdaCase
        ScopedTypeVariables

common day
    import:           warnings
    build-depends:
        base,
        haskell-aoc-util,
    hs-source-dirs:   app
    default-language: GHC2021

executable day01
    import:           day
    main-is:          Day01.hs

executable day02
    import:           day
    main-is:          Day02.hs
